明天去实验室

--- a/learning_fastai/第七章-sota.ipynb
+++ b/learning_fastai/第七章-sota.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T14:32:57.207478Z",
-     "start_time": "2024-09-19T14:32:57.204021Z"
+     "end_time": "2024-09-20T01:04:44.993778Z",
+     "start_time": "2024-09-20T01:04:44.987059Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "815f2eb2267078f6",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-19T15:18:14.413621Z",
-     "start_time": "2024-09-19T14:32:58.540422Z"
+     "end_time": "2024-09-20T01:05:11.862326Z",
+     "start_time": "2024-09-20T01:05:11.857683Z"
     }
    },
    "source": [
@@ -33,13 +33,410 @@
     "\n",
     "path = untar_data(URLs.IMAGENETTE)"
    ],
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:05:31.782699Z",
+     "start_time": "2024-09-20T01:05:30.913413Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "dblock = DataBlock(\n",
+    "    blocks=[ImageBlock, CategoryBlock],\n",
+    "    get_items=get_image_files,\n",
+    "    get_y=parent_label,\n",
+    "    item_tfms=[Resize(460)],\n",
+    "    batch_tfms=aug_transforms(size=224, min_scale=0.75)\n",
+    ")\n",
+    "dls = dblock.dataloaders(path, bs=64)"
+   ],
+   "id": "1fb508dd6b463f9a",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:18:00.285021Z",
+     "start_time": "2024-09-20T01:05:40.625531Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "model = xresnet50()\n",
+    "learn = Learner(dls, model, loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
+    "learn.fit_one_cycle(5, 3e-3)"
+   ],
+   "id": "dc32a6933d4a0de5",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading a new version of this dataset...\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1.602695</td>\n",
+       "      <td>2.303988</td>\n",
+       "      <td>0.378267</td>\n",
+       "      <td>02:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.213578</td>\n",
+       "      <td>1.834208</td>\n",
+       "      <td>0.508962</td>\n",
+       "      <td>02:25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.929070</td>\n",
+       "      <td>1.494063</td>\n",
+       "      <td>0.585138</td>\n",
+       "      <td>02:25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.709780</td>\n",
+       "      <td>0.782421</td>\n",
+       "      <td>0.766617</td>\n",
+       "      <td>02:27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.576382</td>\n",
+       "      <td>0.590687</td>\n",
+       "      <td>0.816281</td>\n",
+       "      <td>02:26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:18:21.159058Z",
+     "start_time": "2024-09-20T01:18:20.578301Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x, y = dls.one_batch()\n",
+    "x.shape, y.shape"
+   ],
+   "id": "35ca01a7a6c8761f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 3, 224, 224]), torch.Size([64]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:18:22.214470Z",
+     "start_time": "2024-09-20T01:18:22.207899Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "x.mean(dim=[0, 2, 3]), x.std(dim=[0, 2, 3])",
+   "id": "71e89d45bd1b7af9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorImage([0.4560, 0.4431, 0.4104], device='cuda:0'),\n",
+       " TensorImage([0.2822, 0.2799, 0.2988], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:18:42.852545Z",
+     "start_time": "2024-09-20T01:18:41.738737Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_dls(bs, size):\n",
+    "    dblock = DataBlock(\n",
+    "        blocks=[ImageBlock, CategoryBlock],\n",
+    "        get_items=get_image_files,\n",
+    "        get_y=parent_label,\n",
+    "        item_tfms=[Resize(460)],\n",
+    "        batch_tfms=[*aug_transforms(size=224, min_scale=0.75),\n",
+    "                    Normalize.from_stats(*imagenet_stats)]\n",
+    "    )\n",
+    "    return dblock.dataloaders(path,bs=bs)\n",
+    "\n",
+    "dls = get_dls(64, 224)\n",
+    "x, y = dls.one_batch()\n",
+    "x.mean(dim=[0, 2, 3]), x.std(dim=[0, 2, 3])"
+   ],
+   "id": "4f11893616de20ce",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorImage([-0.0942,  0.0198,  0.0557], device='cuda:0'),\n",
+       " TensorImage([1.2322, 1.2144, 1.2854], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "model = xresnet50()\n",
+    "learn = Learner(dls, model, loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
+    "learn.fit_one_cycle(5, 3e-3)"
+   ],
+   "id": "c02a34d48d2a8d94"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T01:29:32.099761Z",
+     "start_time": "2024-09-20T01:19:42.787060Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Progressive Resizing\n",
+    "dls = get_dls(128,128)\n",
+    "learn = Learner(dls, xresnet50(), loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
+    "learn.fit_one_cycle(4, 3e-3)"
+   ],
+   "id": "fefbe8f0da3db69c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1.895241</td>\n",
+       "      <td>3.331595</td>\n",
+       "      <td>0.357730</td>\n",
+       "      <td>02:29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1.328547</td>\n",
+       "      <td>1.409644</td>\n",
+       "      <td>0.574683</td>\n",
+       "      <td>02:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0.984881</td>\n",
+       "      <td>0.927441</td>\n",
+       "      <td>0.708738</td>\n",
+       "      <td>02:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0.777402</td>\n",
+       "      <td>0.680828</td>\n",
+       "      <td>0.792756</td>\n",
+       "      <td>02:26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-09-20T01:29:32.163820Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "learn.dls = get_dls(64,224)\n",
+    "learn.fine_tune(5, 1e-3)"
+   ],
+   "id": "b78ad72cab510f79",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.841134</td>\n",
+       "      <td>1.019947</td>\n",
+       "      <td>0.707618</td>\n",
+       "      <td>02:27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -76,8 +473,27 @@
       "text/html": [
        "\n",
        "    <div>\n",
-       "      <progress value='1557168128' class='' max='1557161267' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [1557168128/1557161267 45:00&lt;00:00]\n",
+       "      <progress value='0' class='' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      0.00% [0/5 00:00&lt;?]\n",
+       "    </div>\n",
+       "    \n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>\n",
+       "\n",
+       "    <div>\n",
+       "      <progress value='18' class='' max='42' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      42.86% [18/42 00:08&lt;00:11 0.6859]\n",
        "    </div>\n",
        "    "
       ]
@@ -86,7 +502,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 3
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -94,16 +510,11 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "dblock = DataBlock(\n",
-    "    blocks=[ImageBlock(), CategoryBlock()],\n",
-    "    get_items=get_image_files,\n",
-    "    get_y=parent_label,\n",
-    "    item_tfms=[Resize(460)],\n",
-    "    batch_tfms=[aug_transforms(size=224, min_scale=0.75)]\n",
-    ")\n",
-    "dls = dblock.dataloaders(path, bs=64)"
+    "# Test Time Augmmentation\n",
+    "preds, targs = learn.tta()\n",
+    "accuracy(preds, targs).item()"
    ],
-   "id": "1fb508dd6b463f9a"
+   "id": "b23d2863df69895c"
   },
   {
    "metadata": {},
@@ -111,70 +522,13 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "# Mixup\n",
     "model = xresnet50()\n",
-    "learn = Learner(dls, model, loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
-    "learn.fit_one_cycle(5, 3e-3)"
-   ],
-   "id": "dc32a6933d4a0de5"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T15:18:14.449662Z",
-     "start_time": "2024-09-19T15:18:14.418138Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "x, y = dls.one_batch()\n",
-    "x.shape, y.shape"
-   ],
-   "id": "35ca01a7a6c8761f",
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dls' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m x, y \u001B[38;5;241m=\u001B[39m \u001B[43mdls\u001B[49m\u001B[38;5;241m.\u001B[39mone_batch()\n\u001B[0;32m      2\u001B[0m x\u001B[38;5;241m.\u001B[39mshape, y\u001B[38;5;241m.\u001B[39mshape\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'dls' is not defined"
-     ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "x.mean(dim=[0, 2, 3]), x.std(dim=[0, 2, 3])",
-   "id": "71e89d45bd1b7af9"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "def get_dls(bs, size):\n",
-    "    dblock = DataBlock(\n",
-    "        blocks=[ImageBlock, CategoryBlock],\n",
-    "        get_items=get_image_files,\n",
-    "        get_y=parent_label,\n",
-    "        item_tfms=[Resize(460)],\n",
-    "        batch_tfms=[*aug_transforms(size=224, min_scale=0.75),\n",
-    "                    Normalize.from_stats(*imagenet_stats)]\n",
-    "    )\n",
-    "    return dblock.dataloaders(path,bs=bs)\n",
+    "learn = Learner(dls, model, loss_func=CrossEntropyLossFlat(), metrics=accuracy, cbs=Mixup)\n",
     "\n",
-    "dls = get_dls(64, 224)\n",
-    "x, y = dls.one_batch()\n",
-    "x.mean(dim=[0, 2, 3]), x.std(dim=[0, 2, 3])"
+    "learn.fit_one_cycle(5, 3e-3)\n"
    ],
-   "id": "4f11893616de20ce"
+   "id": "6bfba76d222d042a"
   },
   {
    "metadata": {},
@@ -182,34 +536,14 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "# Label Smoothing\n",
     "model = xresnet50()\n",
-    "learn = Learner(dls, model, loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
+    "\n",
+    "learn = Learner(dls, model, loss_func=LabelSmoothingCrossEntropy(), metrics=accuracy)\n",
+    "\n",
     "learn.fit_one_cycle(5, 3e-3)"
    ],
-   "id": "c02a34d48d2a8d94"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "dls = get_dls(128,128)\n",
-    "learn = Learner(dls, xresnet50(), loss_func=CrossEntropyLossFlat(), metrics=accuracy)\n",
-    "learn.fit_one_cycle(4, 3e-3)"
-   ],
-   "id": "fefbe8f0da3db69c"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "learn.dls = get_dls(64,224)\n",
-    "learn.fine_tune(5, 1e-3)"
-   ],
-   "id": "b78ad72cab510f79"
+   "id": "ae852774e3089995"
   },
   {
    "metadata": {},
@@ -217,7 +551,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "a5ab147f3de4907d"
+   "id": "c6bc1816f42ecda6"
   }
  ],
  "metadata": {
